--- a/Zaczy.SongBook.WPF/Zaczy.SongBook.WPF.csproj
+++ b/Zaczy.SongBook.WPF/Zaczy.SongBook.WPF.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>Materiały\ikona.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,12 +21,14 @@
     <Content Include="css\Monofonto Regular\Monofonto Regular.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Materiały\ikona.ico" />
     <Content Include="Piosenki\dds.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MahApps.Metro" Version="2.4.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
