--- a/Zaczy.SongBook.WPF/appsettings.json
+++ b/Zaczy.SongBook.WPF/appsettings.json
@@ -4,7 +4,7 @@
   },
   "Settings": {
     "ApiBaseUrl": "https://api.zaczy.net/api",
-    "ApiBaseUrlLOC": "http://zaczy-api.local/api"
+    "ApiBaseUrlL": "http://zaczy-api.local/api"
   },
   "Logging": {
     "LogLevel": {
