--- a/Zaczy.SongBook.MAUI/Zaczy.SongBook.MAUI.csproj
+++ b/Zaczy.SongBook.MAUI/Zaczy.SongBook.MAUI.csproj
@@ -65,6 +65,8 @@
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-android|AnyCPU'">
 	  <ApplicationId>zaczy.songbook.maui</ApplicationId>
 	  <ApplicationTitle>Śpiewajnik</ApplicationTitle>
+	  <RunAOTCompilation>False</RunAOTCompilation>
+	  <AndroidPackageFormat>apk</AndroidPackageFormat>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-ios|AnyCPU'">
@@ -133,6 +135,7 @@
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.2" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.8" />
+		<PackageReference Include="SpotifyAPI.Web" Version="7.2.1" />
 		<PackageReference Include="System.Net.Http" Version="4.3.4" />
 		<PackageReference Include="System.Private.Uri" Version="4.3.2" />
 		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
@@ -152,6 +155,10 @@
 	  <ProjectReference Include="..\Zaczy.SongBook\Zaczy.SongBook.csproj" />
 	</ItemGroup>
 
+	<!--ItemGroup Condition="'$(TargetFramework)' == 'net9.0-android'">
+		<ProjectReference Include="..\Zaczy.SpotifyBinding\Zaczy.SpotifyBinding.csproj" />
+	</ItemGroup-->
+
 	<ItemGroup>
 	  <MauiXaml Update="Pages\SettingsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
@@ -163,5 +170,22 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
+
+	<PropertyGroup>
+		<MauiEnableXamlCBindingWithSourceCompilation>true</MauiEnableXamlCBindingWithSourceCompilation>
+	</PropertyGroup>
+
+	<ItemGroup>
+    <!-- place the AAR file at Platforms/Android/libs/spotify-app-remote-release.aar -->
+    <!-- Option 1 — common MSBuild item for AARs in modern Android SDK projects -->
+    <AndroidAar Include="Platforms\Android\libs\spotify-app-remote-release.aar">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AndroidAar>
+
+    <!-- Option 2 — older/alternate form (works in some setups) -->
+    <!--
+    <AndroidAarLibrary Include="Platforms\Android\libs\spotify-app-remote-release.aar" />
+    -->
+  </ItemGroup>
 
 </Project>
