--- a/Zaczy.SongBook.Tests/Zaczy.SongBook.Tests.csproj
+++ b/Zaczy.SongBook.Tests/Zaczy.SongBook.Tests.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.4.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.11" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="NUnit" Version="4.2.2" />
