--- a/Zaczy.SongBook.MAUI/appsettings.json
+++ b/Zaczy.SongBook.MAUI/appsettings.json
@@ -1,6 +1,8 @@
 {
   "Settings": {
     "ApiBaseUrl": "https://api.zaczy.net/api",
-    "ApiBaseUrlLoc": "http://zaczy-api.local/api"
+    "ApiBaseUrlL": "http://zaczy-api.local/api",
+    "ApiToken": "1|bmU3V9PqGzm4FidYDpDezWfykHASthx1U9m49Yaa96d7fbe9",
+    "ApiTokenL": "1|FIRNkACb1KxzFGcJiWE5sOoqiZK8Y9YtEiLT0pkZf9fddb43"
   }
 }
