--- a/Zaczy.SongBook.MAUI/Zaczy.SongBook.MAUI.csproj
+++ b/Zaczy.SongBook.MAUI/Zaczy.SongBook.MAUI.csproj
@@ -17,14 +17,14 @@
 		<!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
 
 		<OutputType>Exe</OutputType>
-		<RootNamespace>Zaczy.SongBook.MAUI</RootNamespace>
+		<RootNamespace>Zaczy.Songbook.MAUI</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
 		<!-- Display name -->
-		<ApplicationTitle>Zaczy.SongBook.MAUI</ApplicationTitle>
+		<ApplicationTitle>net.zaczy.songbook</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>net.zaczy.songbook</ApplicationId>
@@ -44,26 +44,26 @@
 	  <EmbedAssembliesIntoApk>False</EmbedAssembliesIntoApk>
 	  <ApplicationId>zaczy.songbook.maui</ApplicationId>
 	  <ApplicationTitle>Śpiewajnik</ApplicationTitle>
-	  <ApplicationDisplayVersion>0.8.5</ApplicationDisplayVersion>
-	  <ApplicationVersion>5</ApplicationVersion>
+	  <ApplicationDisplayVersion>0.8.6</ApplicationDisplayVersion>
+	  <ApplicationVersion>6</ApplicationVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-ios|AnyCPU'">
 	  <ApplicationId>zaczy.songbook.maui</ApplicationId>
 	  <ApplicationTitle>Śpiewajnik</ApplicationTitle>
-	  <ApplicationDisplayVersion>0.8.5</ApplicationDisplayVersion>
-	  <ApplicationVersion>5</ApplicationVersion>
+	  <ApplicationDisplayVersion>0.8.6</ApplicationDisplayVersion>
+	  <ApplicationVersion>6</ApplicationVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-maccatalyst|AnyCPU'">
 	  <ApplicationId>zaczy.songbook.maui</ApplicationId>
 	  <ApplicationTitle>Śpiewajnik</ApplicationTitle>
-	  <ApplicationDisplayVersion>0.8.5</ApplicationDisplayVersion>
-	  <ApplicationVersion>5</ApplicationVersion>
+	  <ApplicationDisplayVersion>0.8.6</ApplicationDisplayVersion>
+	  <ApplicationVersion>6</ApplicationVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-windows10.0.19041.0|AnyCPU'">
-	  <ApplicationId>zaczy.songbook.maui</ApplicationId>
+	  <ApplicationId>net.zaczy.songbook</ApplicationId>
 	  <ApplicationTitle>Śpiewajnik</ApplicationTitle>
 	  <ApplicationDisplayVersion>0.8</ApplicationDisplayVersion>
 	</PropertyGroup>
@@ -73,26 +73,26 @@
 	  <ApplicationTitle>Śpiewajnik</ApplicationTitle>
 	  <RunAOTCompilation>False</RunAOTCompilation>
 	  <AndroidPackageFormat>apk</AndroidPackageFormat>
-	  <ApplicationDisplayVersion>0.8.5</ApplicationDisplayVersion>
-	  <ApplicationVersion>5</ApplicationVersion>
+	  <ApplicationDisplayVersion>0.8.6</ApplicationDisplayVersion>
+	  <ApplicationVersion>6</ApplicationVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-ios|AnyCPU'">
 	  <ApplicationId>zaczy.songbook.maui</ApplicationId>
 	  <ApplicationTitle>Śpiewajnik</ApplicationTitle>
-	  <ApplicationDisplayVersion>0.8.5</ApplicationDisplayVersion>
-	  <ApplicationVersion>5</ApplicationVersion>
+	  <ApplicationDisplayVersion>0.8.6</ApplicationDisplayVersion>
+	  <ApplicationVersion>6</ApplicationVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-maccatalyst|AnyCPU'">
 	  <ApplicationId>zaczy.songbook.maui</ApplicationId>
 	  <ApplicationTitle>Śpiewajnik</ApplicationTitle>
-	  <ApplicationDisplayVersion>0.8.5</ApplicationDisplayVersion>
-	  <ApplicationVersion>5</ApplicationVersion>
+	  <ApplicationDisplayVersion>0.8.6</ApplicationDisplayVersion>
+	  <ApplicationVersion>6</ApplicationVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-windows10.0.19041.0|AnyCPU'">
-	  <ApplicationId>zaczy.songbook.maui</ApplicationId>
+	  <ApplicationId>net.zaczy.songbook</ApplicationId>
 	  <ApplicationTitle>Śpiewajnik</ApplicationTitle>
 	  <ApplicationDisplayVersion>0.8</ApplicationDisplayVersion>
 	</PropertyGroup>
@@ -142,6 +142,7 @@
 	<ItemGroup>
 		<PackageReference Include="AathifMahir.Maui.MauiIcons.Fluent" Version="5.0.0" />
 		<PackageReference Include="AathifMahir.Maui.MauiIcons.FontAwesome.Solid" Version="5.0.0" />
+		<PackageReference Include="Duende.IdentityModel.OidcClient" Version="7.0.0" />
 		<PackageReference Include="LiteDB" Version="5.0.21" />
 		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="10.0.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.11" />
